Update about  me and some info

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, detail-oriented, resilient passionate cybersecurity analyst with an investigative mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
@@ -236,17 +236,9 @@
     <section id="about" class="section scrollspy">
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">
-        <!-- <blockquote>
-          <h2>
-            A Cybersecurity Analyst with a passion for Cybersecurity and Artificial Intelligence.
-          </h2>
-        </blockquote> -->        
+          
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+I am a Master’s graduate from NTU and currently a Cybersecurity Analyst at PUB, Singapore’s National Water Agency. I hold a Bachelor of Computer Science degree with distinction from the University of Wollongong, where I was awarded the Dean’s Merit List (Top 5%) and the IRAS Silver Award for achieving 2nd place in the Bachelor of Computer Science (Cyber Security) programme. I have developed expertise in areas such as digital forensics, malware analysis, open-source intelligence (OSINT), and cyber threat intelligence. With experience competing in over 50 Capture The Flag (CTF) challenges, I actively document technical write-ups to deepen my knowledge and contribute to the cybersecurity community. I am passionate about addressing real-world security challenges by leveraging automation, threat intelligence tools, and established cybersecurity frameworks to improve organizational resilience and operational efficiency.
         </p>
         <p>
           <ul>
@@ -995,7 +987,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Cybersecurity Analyst", "CTF Enjoyer", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
