--- a/index.html
+++ b/index.html
@@ -929,29 +929,31 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+  <a href="https://bizcard.digitalworkplace.gov.sg/users/560f2232-7740-4c84-aa70-e308d4c654d3/index.html"
+          <a aria-label="Gadiel Business Card" data-position="top" data-tooltip="Business Card"
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-address-card"></i></a>
+ <a href="https://bizcard.digitalworkplace.gov.sg/users/560f2232-7740-4c84-aa70-e308d4c654d3/index.html"
+              aria-label="Business Card">Business Card</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Gadiel" href="mailto:gadiellaurz@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Gadiel" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:gadiellaurz@gmail.com"
+              class="hoverline">gadiellaurz@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Gadiel on GitHub" href="http://github.com/glrz" target="_blank"
+            data-position="top" data-tooltip="View Gadiel on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Gadiel on Github" href="http://github.com/glrz" class="hoverline"
+              target="_blank">github.com/glrz</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Gadiel on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/" target="_blank"
+            data-position="top" data-tooltip="View Gadiel on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/"
+              class="hoverline" target="_blank">https://www.linkedin.com/in/gadiellaurz/</a></a>
         </p>
       </div>
     </section>
