add in PUB info

--- a/index.html
+++ b/index.html
@@ -257,18 +257,18 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.pub.gov.sg/" target="_blank"><img alt="PUB logo"
+                    src="/assets/img/PUB Logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                  <span class="card-title"><a href="https://www.pub.gov.sg/" target="_blank"
+                      class="teal-text hoverline">PUB</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Cybersecurity Analyst</div>
             <ul>
               <li>
                 Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
@@ -931,7 +931,7 @@ of each drug container to estimate the degradation of the drug.
         <p>
   <a href="https://bizcard.digitalworkplace.gov.sg/users/560f2232-7740-4c84-aa70-e308d4c654d3/index.html"
           <a aria-label="Gadiel Business Card" data-position="top" data-tooltip="Business Card"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-address-card"></i></a>
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-address-card-o"></i></a>
  <a href="https://bizcard.digitalworkplace.gov.sg/users/560f2232-7740-4c84-aa70-e308d4c654d3/index.html"
               aria-label="Business Card">Business Card</a></a>
         </p>
