amend PUB, and duration

--- a/index.html
+++ b/index.html
@@ -264,11 +264,15 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.pub.gov.sg/" target="_blank"
-                      class="teal-text hoverline">PUB</a></span>
+                      class="teal-text hoverline">
+PUB, Singapore's National Water Agency</a></span>
                 </p>
               </div>
             </div>
             <div class="role brown-text text-darken-2">Cybersecurity Analyst</div>
+     <div class="card-action">
+            <span>May 2024 - Present</span>
+          </div>
             <ul>
               <li>
                 Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
@@ -283,9 +287,6 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <b>Tools:</b> Python, Flask, MongoDB
               </li>
             </ul>
-          </div>
-          <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
           </div>
         </div>
 
@@ -938,7 +939,7 @@ of each drug container to estimate the degradation of the drug.
         <p>
           <a aria-label="Email Gadiel" href="mailto:gadiellaurz@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Gadiel" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:gadiellaurz@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email Gadiel" href="mailto:gadiellaurz@gmail.com"
               class="hoverline">gadiellaurz@gmail.com</a></a>
         </p>
         <p>
@@ -952,7 +953,7 @@ of each drug container to estimate the degradation of the drug.
           <a aria-label="View Gadiel on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/" target="_blank"
             data-position="top" data-tooltip="View Gadiel on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/"
+              class="fa fa-linkedin"></i><a aria-label="Gadiel on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/"
               class="hoverline" target="_blank">https://www.linkedin.com/in/gadiellaurz/</a></a>
         </p>
       </div>
