amend PUB format

--- a/index.html
+++ b/index.html
@@ -269,9 +269,8 @@ PUB, Singapore's National Water Agency</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Cybersecurity Analyst</div>
      <div class="card-action">
-            <span>May 2024 - Present</span>
+            <span> Cybersecurity Analyst | May 2024 - Present </span>
           </div>
             <ul>
               <li>
