--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
                 <a href="https://www.pub.gov.sg/" target="_blank"><img alt="PUB logo"
                     src="/assets/img/PUB Logo.png" class="responsive-img center-block" /></a>
               </div>
-              <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.pub.gov.sg/" target="_blank"
@@ -288,25 +287,25 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </ul>
           </div>
         </div>
-
-        
+ 
         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.mindef.gov.sg/dis" target="_blank"><img alt="DIS logo"
+                    src="/assets/img/dis-logo.png" class="responsive-img center-block" /></a>
               </div>
-              <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="https://www.mindef.gov.sg/dis" target="_blank"
+                      class="teal-text hoverline">Digital and Intelligence Service</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
-            <ul>
+  <div class="card-action">
+            <span>C4X (Cyber) Senior Military Expert Trainee | Jun 2023 - Feb 2024 </span>
+          </div>
+                       <ul>
               <li>
                 Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
 dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
@@ -325,9 +324,6 @@ utilized perspective transformation, object detection, and object tracking to fi
                 <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
               </li>
             </ul>
-          </div>
-          <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
           </div>
         </div>
 
