--- a/index.html
+++ b/index.html
@@ -364,7 +364,10 @@ utilized perspective transformation, object detection, and object tracking to fi
             </div>
           </div>
 
-         
+          <!-- ************* -->
+        </div>
+      </div>
+    </section>
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
