amend some ctf wordings

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ utilized perspective transformation, object detection, and object tracking to fi
                 <span class="card-title activator teal-text hoverline">Gadiel's CTF Writeups<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Collection of technical CTF write-ups in areas like OSINT, Networking, Digital Forensics, Web, and more.
+                  Collection of technical CTF write-ups
                 </p>
               </div>
               <div class="card-reveal">
