--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@ utilized perspective transformation, object detection, and object tracking to fi
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                                 <div class="card-action">
+<p>
+This collection includes CTF competitions from Year 2020 - 2024, in areas like OSINT, Web, Networking, Digital Forensics and more.
+</p>
                   <a aria-label="Visit " href="https://gadiel-lau.gitbook.io/ctf-writeups" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
