--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ utilized perspective transformation, object detection, and object tracking to fi
                     class="mdi-navigation-close right"></i></span>
                                 <div class="card-action">
 <p>
-This collection includes CTF competitions from Year 2020 - 2024, in areas like OSINT, Web, Networking, Digital Forensics and more.
+This collection includes CTF competitions from 2020 to 2024, in areas like OSINT, Web, Networking, Digital Forensics, and more.
 </p>
                   <a aria-label="Visit " href="https://gadiel-lau.gitbook.io/ctf-writeups" target="_blank" data-position="top"
                     data-tooltip="View Online"
