--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
         </div>
 
         <!-- certifications -->
-        <!-- <div class="card">
+         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Certificates</h4>
             <div class="row text-left">
@@ -501,7 +501,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
               </div>
             </div>
           </div>
-        </div> -->
+        </div> 
 
       </div>
     </section>
