--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Materialize - Compiled and minified CSS-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Gadiel Lau | Cybersecurity Analyst </title>
@@ -469,7 +469,8 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
           </div>
         </div>
 
-        <!-- certifications -->
+        
+<!-- To add certifications as a new section and in side nav bar -->
          <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Certificates</h4>
