add in NTU info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css"/>
   <title>Gadiel Lau | Cybersecurity Analyst </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -488,23 +488,25 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
           <div class="col s12 m6 l6">
             <div class="card">
               <div class="card-content">
+ <!-- School Logo -->
+            <img src="/assets/img/NTU_logo.webp"
+                 alt="NTU Logo" style="max-height: 80px; margin-bottom: 10px;" />
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
-                </p>
-                <p class="brown-text">Tempe, USA</p>
-                <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
+                  <b>Degree: </b>Master of Science in Cyber Security  
                   <br>
-                  <b>CGPA: </b>4.0/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Computer Security</li>
+                    <li>Application Security</li>
+                    <li>Cryptography</li> 
+		    <li>Security & Risks Management</li>
+		    <li>Network Security</li>
+		    <li>Privacy Preserving Technologies & Security in AI</li>                      
                   </ul>
                   </p>
 
