--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
  <!-- School Logo -->
-            <img src="/assets/img/NTU_logo.webp"
-                 alt="NTU Logo" style="max-height: 80px; margin-bottom: 10px;" />
+            <img src="/assets/img/NTU_logo.webp
+                 alt="NTU_Logo"" />
                 <p>
                   <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
                   <b>Degree: </b>Master of Science in Cyber Security  
