--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
  <!-- School Logo -->
-            <img src="/assets/img/NTU_logo.webp
-                 alt="NTU_Logo"" />
+            <img src="/assets/img/NTU_logo.webp" alt="NTU Logo" />
                 <p>
                   <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
+<br>
                   <b>Degree: </b>Master of Science in Cyber Security  
                   <br>
                 </p>
