update edu info

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
  <!-- School Logo -->
-            <img src="/assets/img/NTU_logo.webp" alt="NTU Logo" />
+            <img src="/assets/img/NTU_logo.jpg" alt="NTU Logo" />
                 <p>
                   <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
 <br>
@@ -520,29 +520,27 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
-                </p>
-                <p class="brown-text">Ahmedabad, India</p>
-                <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <span class="card-title"><a href="https://www.uow.edu.au/" target="_blank" class="teal-text hoverline">University of Wollongong</a></span>
+  
+                  <b>Degree: </b>Bachelor of Computer Science (Cyber Security)
                   <br>
-                  <b>CGPA: </b>3.13/4.33
                 </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
+ <!-- Relevant Coursework & Awards -->
+<p><b>Relevant Courseworks (all High Distinction):</b></p>
+<ul>
+  <li>Cybersecurity</li>
+  <li>System Security</li>
+  <li>Contemporary Topics in Security</li>
+  <li>Ethical Hacking</li>
+</ul>
 
-                </ul>
+<p><b>Awards & Honors:</b></p>
+<ul>
+  <li>Graduated with Distinction</li>
+  <li>Dean's Merit Award <span class="grey-text text-darken-1">(Top 5%)</span></li>
+  <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.Comp (Cyber Security) graduating cohort</span></li>
+</ul>
               </div>
             </div>
           </div>
