update edu info, include images

--- a/index.html
+++ b/index.html
@@ -489,12 +489,12 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
  <!-- School Logo -->
-            <img src="/assets/img/NTU_logo.jpg" alt="NTU Logo" />
+            <img src="/assets/img/NTU_Logo.jpg" alt="NTU Logo" />
                 <p>
                   <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
 <br>
                   <b>Degree: </b>Master of Science in Cyber Security  
-                  <br>
+                  <br><b>Year:</b> 2024 - 2026
                 </p>
 
                 <ul>
@@ -514,16 +514,17 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
               </div>
             </div>
 
-            
           </div>
           <div class="col s12 m6 l6">
             <div class="card">
               <div class="card-content">
+<!-- School Logo -->
+            <img src="/assets/img/UOW_Logo.png" alt="UOW Logo" />
                 <p>
                   <span class="card-title"><a href="https://www.uow.edu.au/" target="_blank" class="teal-text hoverline">University of Wollongong</a></span>
-  
+  <br>
                   <b>Degree: </b>Bachelor of Computer Science (Cyber Security)
-                  <br>
+                  <br><b>Year:</b> 2020 - 2023
                 </p>
 
  <!-- Relevant Coursework & Awards -->
@@ -539,7 +540,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
 <ul>
   <li>Graduated with Distinction</li>
   <li>Dean's Merit Award <span class="grey-text text-darken-1">(Top 5%)</span></li>
-  <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.Comp (Cyber Security) graduating cohort</span></li>
+  <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.CompSc (Cyber Security) graduating cohort</span></li>
 </ul>
               </div>
             </div>
