change img size

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
  <!-- School Logo -->
-            <img src="/assets/img/NTU_Logo.jpg" alt="NTU Logo" />
+            <img src="/assets/img/NTU_Logo.jpg" alt="NTU Logo" style="max-height: 80px; margin-bottom: 10px;" />
                 <p>
                   <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
 <br>
@@ -519,7 +519,7 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
             <div class="card">
               <div class="card-content">
 <!-- School Logo -->
-            <img src="/assets/img/UOW_Logo.png" alt="UOW Logo" />
+            <img src="/assets/img/UOW_Logo.png" alt="UOW Logo" style="max-height: 80px; margin-bottom: 10px;" />
                 <p>
                   <span class="card-title"><a href="https://www.uow.edu.au/" target="_blank" class="teal-text hoverline">University of Wollongong</a></span>
   <br>
