format issue correction

--- a/index.html
+++ b/index.html
@@ -480,74 +480,85 @@ This collection includes CTF competitions from 2020 to 2024, in areas like OSINT
     </section>
 
     <!-- Seventh Section: Education -->
-    <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
-      <div class="container">
-        <div class="row">
-          <!-- Education -->
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
- <!-- School Logo -->
+<section id="education" class="section scrollspy">
+  <h3 class="page-title white-text teal">Education</h3>
+  <div class="container">
+    <div class="row">
+      
+      <!-- NTU Education Card -->
+      <div class="col s12 m6 l6">
+        <div class="card">
+          <div class="card-content">
+            <!-- School Logo -->
             <img src="/assets/img/NTU_Logo.jpg" alt="NTU Logo" style="max-height: 80px; margin-bottom: 10px;" />
-                <p>
-                  <span class="card-title"><a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">Nanyang Technological University</a></span>
-<br>
-                  <b>Degree: </b>Master of Science in Cyber Security  
-                  <br><b>Year:</b> 2024 - 2026
-                </p>
+            
+            <!-- School Info -->
+            <span class="card-title">
+              <a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">
+                Nanyang Technological University
+              </a>
+            </span>
+            <p>
+              <b>Degree:</b> Master of Science in Cyber Security<br>
+              <b>Year:</b> 2024 – 2026
+            </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Computer Security</li>
-                    <li>Application Security</li>
-                    <li>Cryptography</li> 
-		    <li>Security & Risks Management</li>
-		    <li>Network Security</li>
-		    <li>Privacy Preserving Technologies & Security in AI</li>                      
-                  </ul>
-                  </p>
-
-                </ul>
-              </div>
-            </div>
-
-          </div>
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-<!-- School Logo -->
-            <img src="/assets/img/UOW_Logo.png" alt="UOW Logo" style="max-height: 80px; margin-bottom: 10px;" />
-                <p>
-                  <span class="card-title"><a href="https://www.uow.edu.au/" target="_blank" class="teal-text hoverline">University of Wollongong</a></span>
-  <br>
-                  <b>Degree: </b>Bachelor of Computer Science (Cyber Security)
-                  <br><b>Year:</b> 2020 - 2023
-                </p>
-
- <!-- Relevant Coursework & Awards -->
-<p><b>Relevant Courseworks (all High Distinction):</b></p>
-<ul>
-  <li>Cybersecurity</li>
-  <li>System Security</li>
-  <li>Contemporary Topics in Security</li>
-  <li>Ethical Hacking</li>
-</ul>
-
-<p><b>Awards & Honors:</b></p>
-<ul>
-  <li>Graduated with Distinction</li>
-  <li>Dean's Merit Award <span class="grey-text text-darken-1">(Top 5%)</span></li>
-  <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.CompSc (Cyber Security) graduating cohort</span></li>
-</ul>
-              </div>
-            </div>
+            <!-- Courseworks -->
+            <p><b>Relevant Courseworks:</b></p>
+            <ul>
+              <li>Computer Security</li>
+              <li>Application Security</li>
+              <li>Cryptography</li>
+              <li>Security & Risks Management</li>
+              <li>Network Security</li>
+              <li>Privacy Preserving Technologies & Security in AI</li>
+            </ul>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- UOW Education Card -->
+      <div class="col s12 m6 l6">
+        <div class="card">
+          <div class="card-content">
+            <!-- School Logo -->
+            <img src="/assets/img/UOW_Logo.png" alt="UOW Logo" style="max-height: 80px; margin-bottom: 10px;" />
+
+            <!-- School Info -->
+            <span class="card-title">
+              <a href="https://www.uow.edu.au/" target="_blank" class="teal-text hoverline">
+                University of Wollongong
+              </a>
+            </span>
+            <p>
+              <b>Degree:</b> Bachelor of Computer Science (Cyber Security)<br>
+              <b>Year:</b> 2020 – 2023
+            </p>
+
+            <!-- Courseworks -->
+            <p><b>Relevant Courseworks (all High Distinction):</b></p>
+            <ul>
+              <li>Cybersecurity</li>
+              <li>System Security</li>
+              <li>Contemporary Topics in Security</li>
+              <li>Ethical Hacking</li>
+            </ul>
+
+            <!-- Awards -->
+            <p><b>Awards & Honors:</b></p>
+            <ul>
+              <li>Graduated with Distinction</li>
+              <li>Dean's Merit Award <span class="grey-text text-darken-1">(Top 5%)</span></li>
+              <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.CompSc (Cyber Security) graduating cohort</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
