--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
             </div>
@@ -279,22 +279,27 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>
                        <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
-              </li>
+               Led cyber exercise, identified attacker TTPs using Cyber Kill Chain & MITRE ATT&CK frameworks, and presented comprehensive findings including attack timeline, attack flow, mitigation strategies and recommendations              </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
-              </li>
+                Ranked top in cohort on Linux, CCNA 1 and technical assessments with near-perfect scores              </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
-              </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+                Instructed Python programming sessions for trainees, imparting foundational coding skills              </li>
+              <li>Developed a steganography program incorporating AES and RSA encryption techniques</li>
+ <li>Led and managed a platoon of 23 personnel as the Company Platoon Commander during Service Term</li>
+
+<li>Oversaw the development and implementation of a comprehensive contact tracing tree program</li>
+<li>Completed CCNA 1, Cyber Defence, OSINT, Data Analytics, Artificial Intelligence and Electronic Warfare courses</li>
+<li>Excelled in event planning with formulas and implemented VBA macros to automate tasks in notice period</li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
-              </li>
+<b>Skills:</b><br>
+
+<strong>Technical:</strong> Python, Linux, Cloud Computing (AWS), Power BI, Tableau, Data Analytics<br>
+
+<strong>Cybersecurity:</strong> Network Security (Firewall, IDS/IPS, SIEM, Security Intelligence), Vulnerability Assessment, Incident Management, Server & Mobile OS Security, OSINT, OT Security<br>
+
+<strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Thirty-Six Stratagems<br>
+
+<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline              </li>
             </ul>
           </div>
         </div>
