--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Gadiel Lau.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#FFFFFF"></span></h5>
-              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
+              <h5 style="text-align: justify;">Organized, detail-oriented, and resilient cybersecurity analyst with strong problem-solving skills, a collaborative mindset, and a passion for tackling complex, real-world challenges through investigative thinking and resourcefulness.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/gadiellaurz/" target="_blank">
@@ -209,10 +208,10 @@
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">
           
-        <p>
+        <p style="text-align: justify;">
 I am a Cybersecurity Analyst at PUB, Singapore’s National Water Agency, holding a Master of Science in Cybersecurity from Nanyang Technological University and a Bachelor of Computer Science (Cybersecurity) with distinction from the University of Wollongong. During my undergraduate studies, I earned top academic honours, including placement on the Dean’s Merit List (Top 5%) and the IRAS Silver Award for securing second place in the Cybersecurity programme.
 </p>
-<p>
+<p style="text-align: justify;">
 With expertise spanning digital forensics, malware analysis, open-source intelligence (OSINT), and cyber threat intelligence, I have competed in over 50 Capture The Flag (CTF) challenges and regularly publish technical write-ups to both deepen my knowledge and contribute to the cybersecurity community. Driven by a passion for solving real-world security challenges, I leverage automation, advanced threat intelligence platforms, and established cybersecurity frameworks to strengthen organizational resilience and optimize operational efficiency.
         </p>
       </div>
